<resources>
    <string name="app_name">Drive Test</string>
    <string name="WelcomeText">Drive Test</string>
    <string name="Disclaimer">DrivingTest.ca is an online driving test practice site that serves all provinces and territories in Canada. Advance through the practice tests at your own pace on any computer, tablet or mobile phone with internet access. While these tests are not the same as the actual ones you will be taking, they can give you a good idea of what to expect. It is all FREE!</string>
    <string name="AcceptDisclaimer">I have read and accept the terms and conditions</string>
    <string name="Accept">Accept</string>
    <string name="Decline">Decline</string>

    <string name="btnMenu01">M-1 Motorcycle</string>
    <string name="btnMenu02">M-2 Motorcycle</string>
    <string name="btnMenu03">G-1 Car</string>
    <string name="btnMenu04">G-2 Car</string>
    <string name="btnMenu05">FAQs</string>
    <string name="btnMenu06">Ministry Links</string>


    <!--<string-array name="m1Questions">-->
    <!--<item>Please select the answer that best describes the picture 1.</item>-->
    <!--<item>Please select the answer that best describes the picture 2.</item>-->
    <!--<item>Please select the answer that best describes the picture 3.</item>-->
    <!--<item>Please select the answer that best describes the picture 4.</item>-->
    <!--<item>Please select the answer that best describes the picture 5.</item>-->
    <!--</string-array>-->

    <string-array name="m1Q1">
        <item>Please select the answer that best describes the picture 1.</item>
        <item>A</item>
        <item>Road Work Ahead</item>
        <item>A construction sign replacing flagman on duty</item>
        <item>Regulatory sign-reduce speed</item>
        <item>School Area Ahead</item>
    </string-array>

    <string-array name="m1Q2">
        <item>Please select the answer that best describes the picture 2.</item>
        <item>D</item>
        <item>You are approaching a hospital zone</item>
        <item>Pedestrian crosswalk ahead</item>
        <item>You are approaching a 4-way intersection</item>
        <item>Railway crossing ahead</item>
    </string-array>

    <string-array name="m1Q3">
        <item>Please select the answer that best describes the picture 3.</item>
        <item>B</item>
        <item>Hidden intersection ahead</item>
        <item>Do not turn left at the intersection</item>
        <item>You are approaching a traffic island</item>
        <item>Do not turn right at the intersection</item>
    </string-array>

    <string-array name="m1Q4">
        <item>Please select the answer that best describes the picture 4.</item>
        <item>C</item>
        <item>Road under construction</item>
        <item>Divided highway ends</item>
        <item>The road ahead is split into two separate roads by a median</item>
        <item>Narrow bridge ahead</item>
    </string-array>

    <string-array name="m1Q5">
        <item>Please select the answer that best describes the picture 1.</item>
        <item>A</item>
        <item>Keep to the right of the traffic island</item>
        <item>Winding road ahead</item>
        <item>Pass other traffic on the right</item>
        <item>Road turns right then left</item>
    </string-array>
    <string name="title_activity_m2_questions">M2 Questions</string>


</resources>
