<?xml version="1.0" encoding="utf-8"?>
<TableLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:stretchColumns="*">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Button
            android:text="@string/btnMenu01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnMenuOption1"/>

     </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
        <Button
            android:text="@string/btnMenu02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnMenuOption2"/>

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
        <Button
            android:text="@string/btnMenu03"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnMenuOption3"/>

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
        <Button
            android:text="@string/btnMenu04"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnMenuOption4"/>

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
        <Button
            android:text="@string/btnMenu05"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnMenuOption5"/>

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
        <Button
            android:text="@string/btnMenu06"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnMenuOption6"/>

    </TableRow>
</TableLayout>
