<?xml version="1.0" encoding="utf-8"?>
<TableLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:stretchColumns="*">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtDisclaimer"
            android:text="@string/Disclaimer"
            android:layout_span="4"
            android:textAppearance="@android:style/TextAppearance.Material.Large" />
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <CheckBox
            android:text="@string/AcceptDisclaimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/chkDisclaimer"
            android:layout_span="4"
            android:textStyle="normal|bold" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <Button
            android:text="@string/Accept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnAccept"
            android:layout_column="2" />

        <Button
            android:text="@string/Decline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnDecline"
            android:layout_column="3" />
    </TableRow>
</TableLayout>
